# spatialite-gis-archeos

./: Bitmaps.cpp  Classdef.h  ClassifyDlgs.cpp  Dialogs.cpp  GraphicsDlgs.cpp  LayerTree.cpp  Main.cpp  Makefile-static-Linux  Makefile-static-MacOsX  Makefile-static-MinGW  Makefile.am  Makefile.in  MapDynamic.cpp  MapView.cpp  MetadataInit.cpp  Network.cpp  Objects.cpp  OutputMap.cpp  Shapefiles.cpp  SqlHelpers.cpp  TableDialogs.cpp  configure  configure.ac  indent_me  spatialite-gis_1.0.0c.orig.tar.xz.delta  spatialite-gis_1.0.0c.orig.tar.xz.id
color_symbols/: Makefile.am  Makefile.in  accept.xpm  action_stop.xpm  add.xpm  asterisk_yellow.xpm  bell.xpm  blue_flag.xpm  book_open.xpm  brick.xpm  bullet_add.xpm  bullet_arrow_down.xpm  bullet_arrow_up.xpm  bullet_black.xpm  bullet_blue.xpm  bullet_delete.xpm  bullet_error.xpm  bullet_green.xpm  bullet_orange.xpm  bullet_picture.xpm  bullet_pink.xpm  bullet_purple.xpm  bullet_red.xpm  bullet_star.xpm  bullet_white.xpm  bullet_yellow.xpm  camera.xpm  camera_small.xpm  cart.xpm  chart_bar.xpm  cog.xpm  color_wheel.xpm  delete.xpm  drink.xpm  drink_empty.xpm  email.xpm  exclamation.xpm  eye.xpm  female.xpm  flag_blue.xpm  (+41 more)
debian/: README.Debian  README.source  changelog  control  copyright  menu  rules  spatialite-gis.install
debian/patches/: 0001-Add-linkage-against-libspatialite.patch  0002-Fix-.desktop-shebang.patch  series
gnome_resource/: Makefile.am  Makefile.in  spatialite-gis.desktop
icons/: Makefile.am  Makefile.in  arc_no.xpm  arc_yes.xpm  asterisk.xpm  build_network.xpm  cancel.xpm  checked_brush.xpm  checked_brush2.xpm  checked_brush3.xpm  classify.xpm  crosshair.xpm  crs.xpm  cut.xpm  cut_blue.xpm  cut_red.xpm  down.xpm  drop_network.xpm  edit_no.xpm  edit_yes.xpm  graphics.xpm  icon.xpm  icon_info.xpm  ident_off.xpm  ident_on.xpm  labels.xpm  left.xpm  line_meter.xpm  linestrings_off.xpm  linestrings_on.xpm  map_frame.xpm  network_off.xpm  network_on.xpm  node_from.xpm  node_to.xpm  off.xpm  on.xpm  output_map.xpm  pencil.xpm  pencil_add.xpm  (+35 more)
osm_symbols/: Makefile.am  Makefile.in  airport.xpm  anchor.xpm  bicycling.xpm  bus.xpm  camping.xpm  car.xpm  caravan.xpm  castle.xpm  court_of_law.xpm  crane.xpm  danger.xpm  emergency.xpm  emergency_phone.xpm  exchange.xpm  firebrigade.xpm  fuel_station.xpm  garage.xpm  garden.xpm  guest_house.xpm  handicapped.xpm  health.xpm  helipad.xpm  hospital.xpm  hostel.xpm  hotel.xpm  incline.xpm  information.xpm  island.xpm  lighthouse.xpm  marina.xpm  mine.xpm  money.xpm  motorbike.xpm  motorbike2.xpm  museum.xpm  nautical.xpm  park.xpm  park_car.xpm  (+36 more)
patterns/: Makefile.am  Makefile.in  brickwall.xpm  cross0.xpm  cross01.xpm  cross1.xpm  cross2.xpm  dense1.xpm  dense2.xpm  dense3.xpm  dense4.xpm  dense5.xpm  dense6.xpm  diag1_0.xpm  diag1_01.xpm  diag1_1.xpm  diag1_2.xpm  diag2_0.xpm  diag2_01.xpm  diag2_1.xpm  diag2_2.xpm  diag_cross_0.xpm  diag_cross_01.xpm  diag_cross_1.xpm  diag_cross_2.xpm  dots1.xpm  dots2.xpm  dots3.xpm  dots5.xpm  dots6.xpm  horz0.xpm  horz01.xpm  horz1.xpm  horz2.xpm  land1.xpm  land10.xpm  land2.xpm  land3.xpm  land4.xpm  land5.xpm  (+11 more)
symbols/: Makefile.am  Makefile.in  huge_andrew.xpm  huge_cross.xpm  huge_point.xpm  huge_square.xpm  huge_tri_down.xpm  huge_tri_left.xpm  huge_tri_right.xpm  huge_tri_up.xpm  large_andrew.xpm  large_arrow_down.xpm  large_arrow_down_left.xpm  large_arrow_down_right.xpm  large_arrow_left.xpm  large_arrow_right.xpm  large_arrow_up.xpm  large_arrow_up_left.xpm  large_arrow_up_right.xpm  large_cross.xpm  large_diamond.xpm  large_point.xpm  large_square.xpm  large_tri_down.xpm  large_tri_left.xpm  large_tri_right.xpm  large_tri_up.xpm  medium_andrew.xpm  medium_cross.xpm  medium_diamond.xpm  medium_point.xpm  medium_square.xpm  medium_tri_down.xpm  medium_tri_left.xpm  medium_tri_right.xpm  medium_tri_up.xpm  small_andrew.xpm  small_arrow_down.xpm  small_arrow_down_left.xpm  small_arrow_down_right.xpm  (+14 more)
win_resource/: Makefile.am  Makefile.in  spatialite-gis-icon.icns
