
EXTRA_DIST = accept.xpm action_stop.xpm add.xpm asterisk_yellow.xpm \
	bell.xpm blue_flag.xpm book_open.xpm brick.xpm bullet_add.xpm \
	bullet_arrow_down.xpm bullet_arrow_up.xpm bullet_black.xpm \
	bullet_blue.xpm bullet_delete.xpm bullet_error.xpm \
	bullet_green.xpm bullet_orange.xpm bullet_picture.xpm \
	bullet_pink.xpm bullet_purple.xpm bullet_red.xpm \
	bullet_star.xpm bullet_white.xpm bullet_yellow.xpm \
	camera_small.xpm camera.xpm cart.xpm chart_bar.xpm cog.xpm \
	color_wheel.xpm delete.xpm drink_empty.xpm drink.xpm \
	email.xpm exclamation.xpm eye.xpm female.xpm flag_blue.xpm \
	flag_green.xpm flag_orange.xpm flag_pink.xpm flag_purple.xpm \
	flag_red.xpm flag_yellow.xpm green_flag.xpm heart.xpm \
	help.xpm house.xpm icon_accept.xpm icon_alert.xpm icon_clock.xpm \
	icon_email.xpm icon_favourites.xpm icon_home.xpm icon_info.xpm \
	icon_key.xpm icon_security.xpm icon_user.xpm icon_world.xpm \
	information1.xpm lightning.xpm Makefile.am male.xpm money1.xpm \
	money_dollar.xpm money_euro.xpm music.xpm new.xpm palette.xpm \
	photos.xpm photo.xpm picture_empty.xpm pictures.xpm picture.xpm \
	rainbow.xpm red_flag.xpm rosette.xpm time.xpm tux.xpm \
	white_flag.xpm yellow_flag.xpm

