
EXTRA_DIST = about.xpm arc_no.xpm arc_yes.xpm asterisk.xpm \
	build_network.xpm cancel.xpm center.xpm charset.xpm \
	checked_brush2.xpm checked_brush3.xpm checked_brush.xpm \
	classify.xpm connect.xpm create_new.xpm crosshair.xpm \
	crs.xpm cut_blue.xpm cut_red.xpm cut.xpm db.xpm disconnect.xpm \
	down.xpm drop_network.xpm dumpshp.xpm edit_no.xpm edit_yes.xpm \
	exit.xpm graphics.xpm icon_info.xpm icon.xpm ident_off.xpm \
	ident_on.xpm kill_spindex.xpm labels.xpm left.xpm line_meter.xpm \
	linestrings_off.xpm linestrings_on.xpm loadshp.xpm map_frame.xpm \
	mbrcache.xpm memdb_clock.xpm memdb_load.xpm memdb_new.xpm \
	memdb_save.xpm network_off.xpm network_on.xpm node_from.xpm \
	node_to.xpm off.xpm on.xpm output_map.xpm pencil_add.xpm \
	pencil_delete.xpm pencil_go.xpm pencil.xpm points_off.xpm \
	points_on.xpm polygon_meter.xpm polygons_off.xpm polygons_on.xpm \
	raster_off.xpm raster_on.xpm refresh.xpm remove.xpm right.xpm \
	route_no.xpm route_yes.xpm rs_first_off.xpm rs_first_on.xpm \
	rs_last_off.xpm rs_last_on.xpm rs_next_off.xpm rs_next_on.xpm \
	rs_previous_off.xpm rs_previous_on.xpm scale_visibility.xpm \
	selection_remove.xpm selection_top_no.xpm selection_top_yes.xpm \
	spatialidx.xpm splash_screen.xpm srids.xpm statistics.xpm \
	table_add.xpm table_gear.xpm table_save_no.xpm table_save_yes.xpm \
	table.xpm up.xpm vacuum.xpm zoom_in_no.xpm zoom_in.xpm \
	zoom_in_yes.xpm zoom_max.xpm zoom_min.xpm zoom_out_no.xpm \
	zoom_out.xpm zoom_out_yes.xpm

