
EXTRA_DIST = airport.xpm anchor.xpm bicycling.xpm bus.xpm camping.xpm \
	caravan.xpm car.xpm castle.xpm court_of_law.xpm crane.xpm \
	danger.xpm emergency_phone.xpm emergency.xpm exchange.xpm \
	firebrigade.xpm fuel_station.xpm garage.xpm garden.xpm \
	guest_house.xpm handicapped.xpm health.xpm helipad.xpm \
	hospital.xpm hostel.xpm hotel.xpm incline.xpm information.xpm \
	island.xpm lighthouse.xpm marina.xpm mine.xpm money.xpm \
	motorbike2.xpm motorbike.xpm museum.xpm nautical.xpm park_car.xpm \
	parking2.xpm parking.xpm park.xpm pedestrian.xpm people.xpm \
	pharmacy.xpm picnic.xpm plant.xpm post_box.xpm proposed.xpm \
	railway.xpm recycling.xpm repair_shop.xpm restrictions.xpm \
	right_of_way.xpm road_works.xpm roundabout_left.xpm \
	roundabout_right.xpm shopping.xpm sports.xpm stop.xpm \
	tap_drinking.xpm telephone.xpm theater.xpm toilets.xpm \
	traffic_jam.xpm traffic_light.xpm trash.xpm trees.xpm \
	vehicle.xpm viewpoint.xpm works.xpm wpttemp_green.xpm \
	wpttemp_red.xpm wpttemp.xpm wpttemp_yellow.xpm zoo.xpm

