
EXTRA_DIST = brickwall.xpm cross01.xpm cross0.xpm cross1.xpm \
	cross2.xpm dense1.xpm dense2.xpm dense3.xpm dense4.xpm \
	dense5.xpm dense6.xpm diag1_01.xpm diag1_0.xpm diag1_1.xpm \
	diag1_2.xpm diag2_01.xpm diag2_0.xpm diag2_1.xpm diag2_2.xpm \
	diag_cross_01.xpm diag_cross_0.xpm diag_cross_1.xpm \
	diag_cross_2.xpm dots1.xpm dots2.xpm dots3.xpm dots5.xpm \
	dots6.xpm horz01.xpm horz0.xpm horz1.xpm horz2.xpm land10.xpm \
	land1.xpm land2.xpm land3.xpm land4.xpm land5.xpm land6.xpm \
	land7.xpm land8.xpm land9.xpm sea1.xpm sea2.xpm sea3.xpm \
	vert01.xpm vert0.xpm vert1.xpm vert2.xpm 

