
EXTRA_DIST = huge_andrew.xpm huge_cross.xpm huge_point.xpm huge_square.xpm \
	huge_tri_down.xpm huge_tri_left.xpm huge_tri_right.xpm \
	huge_tri_up.xpm large_andrew.xpm large_arrow_down_left.xpm \
	large_arrow_down_right.xpm large_arrow_down.xpm large_arrow_left.xpm \
	large_arrow_right.xpm large_arrow_up_left.xpm \
	large_arrow_up_right.xpm large_arrow_up.xpm large_cross.xpm \
	large_diamond.xpm large_point.xpm large_square.xpm \
	large_tri_down.xpm large_tri_left.xpm large_tri_right.xpm \
	large_tri_up.xpm medium_andrew.xpm medium_cross.xpm \
	medium_diamond.xpm medium_point.xpm medium_square.xpm \
	medium_tri_down.xpm medium_tri_left.xpm medium_tri_right.xpm \
	medium_tri_up.xpm small_andrew.xpm small_arrow_down_left.xpm \
	small_arrow_down_right.xpm small_arrow_down.xpm small_arrow_left.xpm \
	small_arrow_right.xpm small_arrow_up_left.xpm \
	small_arrow_up_right.xpm small_arrow_up.xpm small_cross.xpm \
	small_diamond.xpm small_point.xpm small_square.xpm \
	small_tri_down.xpm small_tri_left.xpm small_tri_right.xpm \
	small_tri_up.xpm square_diamond.xpm

